Wed Jun 29 17:09:02 MST 2005 Trevor Fields  <fields_t@ociweb.com>

        * performance-tests/DCPS/SimpleE2ETest/TestStats.h:
        * performance-tests/DCPS/SimpleE2ETest/Writer.cpp:
        * performance-tests/DCPS/SimpleE2ETest/publisher.cpp:
        * performance-tests/DCPS/SimpleE2ETest/subscriber.cpp:
        * performance-tests/DCPS/TCPListenerTest/DataReaderListener.cpp:
        * performance-tests/DCPS/TCPListenerTest/TestStats.h:
        * performance-tests/DCPS/TCPListenerTest/Writer.cpp:
        * performance-tests/DCPS/TCPListenerTest/common.h:
        * performance-tests/DCPS/TCPListenerTest/publisher.cpp:
        * performance-tests/DCPS/TCPListenerTest/subscriber.cpp:
        * performance-tests/DCPS/UDPListenerTest/TestStats.h:
        * performance-tests/DCPS/UDPListenerTest/Writer.cpp:
        * performance-tests/DCPS/UDPListenerTest/common.h:
        * performance-tests/DCPS/UDPListenerTest/publisher.cpp:
        * performance-tests/DCPS/UDPListenerTest/subscriber.cpp:

          Changed to shift the data size when first passed in.  This
          fixes an issue with the tests not sending the correct amount of data.

Tue Jun 29 13:54:47 MST 2005  Scott Harris  <harris_s@ociweb.com>

        * DDS_realease_notes.txt:
        
          Update test section per fixes and split out of DDS from ocitao repository.

Wed Jun 29 11:16:05 MST 2005  Trevor Fields  <fields_t@ociweb.com>

        * dds/DCPS/Definitions.h:
          Changed ACE_Message_Block allocator to use an ACE_Thread_Lock
          The message block's duplicate method was using the same
          allocator in different threads at the same time.

        * dds/DCPS/DataReaderImpl.cpp:
        * dds/DCPS/DataReaderImpl.h:
        * dds/DCPS/DataWriterImpl.cpp:
        * dds/DCPS/DataWriterImpl.h:
        * dds/DCPS/PublisherImpl.cpp:
        * dds/DCPS/SubscriberImpl.cpp:
          Changed to remove all the associations when
          DataReader/DataWriter is deleted.
