@@ -35,6 +35,7 @@ CORBA::ULong max_mili_sec_blocking = 5000;
 
 int num_datawriters = 1;
 int num_datareaders = 1;
+unsigned id = 0;
 // largest positive value of a long is 2147483647
 CORBA::Long MAX_SAMPLES_PER_INSTANCE = ::DDS::LENGTH_UNLIMITED; 
 CORBA::Long MAX_SAMPLES = ::DDS::LENGTH_UNLIMITED;
